Assembler/tests/optimizations/nop.asm
jmp 0
stms s0, 8201 # 4
jmp 0
stms s0, 8210 # 6
